--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "puppeteer": "^5.4.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "file-loader": "^6.1.1"
+    "file-loader": "^6.1.1",
+    "webpack-dev-server": "^3.11.0",
+    "webpack": "^4.43.0"
   }
 }
